--- a/bank_app/templates/registration/login.html
+++ b/bank_app/templates/registration/login.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container-fluid">
+
+
 <form class="" action="" method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <input type="submit" name="name" value="Login">
 </form>
-
+</div>
 {% endblock %}
