profile views working

--- a/bank_app/templates/index.html
+++ b/bank_app/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     {% if request.user.is_authenticated %}
-      <a href="{% url 'transaction_create_view' user.id %}">Your Account</a>
+      <a href="{% url 'transaction_create_view' %}">Your Account</a>
     {% endif %}
 
 {% endblock %}
