--- a/bank_app/templates/bank/transaction_form.html
+++ b/bank_app/templates/bank/transaction_form.html
@@ -1,23 +1,42 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<hr>
 <div class="container-fluid">
-  <form class="" action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
+    <div class="row">
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+          <form class="" action="" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="btn btn-info btn-md pull-right" name="" value="submit">
+          </form>
+        </div>
+      </div>
+    </div>
+<div class="col-md-4">
+<div class="panel panel-default">
+  <div class="panel-body">
+    <table class="table table-striped table-bordered">
+      <tr>
+          <th>Transactions</th>
+      </tr>
+          <h4 style="color:red;" align='center'>Your Account Number: {{ request.user.profile.id }}</h4>
+            {% for type in transaction %}
+            <tr><td>
+              $ {{ type.amount|floatformat:2 }} <br>
+              {{ type.get_transaction_type_display }} <br>
+              {{ type.time_created }}
+            {% endfor %}
+            </tr></td>
+              <hr>
+            <h4 align='center'>Account Total: ${{ request.user.profile.get_total|floatformat:2}}</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<hr>
 
-    <input type="submit" name="" value="submit">
-  </form>
-</div>
-<hr>
-<div class="container-fluid">
-  Your Account Number: {{ request.user.profile.id }}
-{% for type in transaction %}
-  <br>
-  $ {{ type.amount }} &nbsp;
-  {{ type.get_transaction_type_display }}
-{% endfor %}
-<hr>
-Account Total: ${{ request.user.profile.get_total }}
-</div>
 {% endblock %}
