--- a/bank_app/templates/registration/login.html
+++ b/bank_app/templates/registration/login.html
@@ -2,12 +2,20 @@
 
 {% block content %}
 <div class="container-fluid">
-
-
+  <div class="col-md-4 col-md-offset-4">
+<div class="panel panel-default">
+<div class="panel-body">
+<br>
 <form class="" action="" method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" name="name" value="Login">
+
+
+
+  <input type="submit" class="btn btn-info btn-md pull-right" name="name" value="Login">
 </form>
+</div>
+</div>
+</div>
 </div>
 {% endblock %}
