--- a/bank_app/templates/auth/user_form.html
+++ b/bank_app/templates/auth/user_form.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form class="" action="" method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-<button type="submit" name="">Create User</button>
-</form>
+<div class="container-fluid">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="panel">
+            <form class="" action="" method="post">
+              {% csrf_token %}
+              {{ form.as_p }}
+            <button type="submit" class="btn btn-primary pull-right">Create User</button>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
