--- a/bank_app/templates/bank/transaction_form.html
+++ b/bank_app/templates/bank/transaction_form.html
@@ -10,7 +10,7 @@
           <form class="" action="" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" class="btn btn-info btn-md pull-right" name="" value="submit">
+            <input type="submit" class="btn btn-primary btn-md pull-right" name="" value="submit">
           </form>
         </div>
       </div>
