--- a/bank_app/templates/bank/transaction_form.html
+++ b/bank_app/templates/bank/transaction_form.html
@@ -13,9 +13,12 @@
             <input type="submit" class="btn btn-primary btn-md pull-right" name="" value="submit">
           </form>
         </div>
+
       </div>
+        <br><img src="/static/images.jpeg" class="img-responsive center-block" alt="" />
     </div>
-<div class="col-md-4">
+
+<div class="col-md-8">
 <div class="panel panel-default">
   <div class="panel-body">
     <table class="table table-striped table-bordered">
@@ -38,5 +41,8 @@
   </div>
 </div>
 <hr>
+
+
+
 
 {% endblock %}
